@@ -60,7 +60,7 @@ $tab['object']['rackspace'] = 'Rackspace';
 $tab['object']['ports'] = 'Ports';
 $tab['object']['network'] = 'IPv4';
 $tab['object']['portfwrd'] = 'NATv4';
-$tab['object']['switchvlans'] = 'VLANs';
+$tab['object']['switchvlans'] = 'Live VLANs';
 $tab['object']['snmpportfinder'] = 'SNMP port finder';
 $helptab['object']['network'] = 'nets';
 $helptab['object']['ports'] = 'ports';
